[package]
name = "cursive_buffered_backend"
version = "0.1.1"
authors = ["Alexander Gavrilov <agavrilov@users.noreply.github.com>"]
license = "MIT"
categories = ["command-line-interface"]
keywords = ["termion", "TUI", "UI", "Cursive"]
readme = "README.md"
repository = "https://github.com/agavrilov/cursive_buffered_backend"
description = "The buffering backend for any Cursive backend"

[dependencies]
smallvec = ">=0"
unicode-segmentation = ">=1"
unicode-width = ">=0"
enumset = "0.3.17"
crossbeam-channel = ">=0"
log = ">=0"

[dependencies.cursive]
#version = "0.11.2"
default-features = false
git = "https://github.com/jack-atack/Cursive.git"
tag = "0.11.2"
